@@ -22,7 +22,7 @@ ThisIsContentOfYourCard=This is details of your card
 CardContent=Content of your member card
 SetLinkToUser=Link to a Dolibarr user
 SetLinkToThirdParty=Link to a Dolibarr third party
-MembersCards=Members print cards
+MembersCards=Members business cards
 MembersList=List of members
 MembersListToValid=List of draft members (to be validated)
 MembersListValid=List of valid members
@@ -154,3 +154,9 @@ MoreActions=Complementary action on recording
 MoreActionBankDirect=Create a direct transaction record on account
 MoreActionBankViaInvoice=Create an invoice and payment on account
 MoreActionInvoiceOnly=Create an invoice with no payment
+LinkToGeneratedPages=Generate visit cards
+LinkToGeneratedPagesDesc=This screen allows you to generate PDF files with business cards for all your members or a particular member.
+PDFForAllMembersCards=Generate PDF of business cards for all members (Format for PDF actually setup : <b>%s</b>)
+PDFForOneMemberCards=Generate PDF of business cards for a particular member (Format for PDF actually setup: <b>%s</b>)
+BuildCards=Build PDF file
+
