@@ -154,3 +154,8 @@ MoreActions=Action complémentaire à l'enregistrement
 MoreActionBankDirect=Création transaction sur compte directement
 MoreActionBankViaInvoice=Création facture avec paiement sur compte
 MoreActionInvoiceOnly=Création facture sans paiement
+LinkToGeneratedPages=Génération de cartes de visites
+LinkToGeneratedPagesDesc=Cet écran vous permet de générer des planches de cartes de visites pour chaque adhérents ou pour un adhérent en particulier.
+PDFForAllMembersCards=Génération PDF de cartes pour tous les adhérents (Format de planche actuellement configuré: <b>%s</b>)
+PDFForOneMemberCards=Génération PDF de cartes pour un adhérent particulier (Format de planche actuellement configuré: <b>%s</b>)
+BuildCards=Générer cartes de visites
