@@ -9,131 +9,6 @@ Members=Medlemmer
 MemberAccount=Medlemskonto
 ShowMember=Bis medlemskort
 UserNotLinkedToMember=Brukeren er ikke knyttet til noe medlem
-MembersTickets=Members Tickets
-Attributs=Attributes
-Person=Person
-ErrorMemberTypeNotDefined=Member type not defined
-ListOfPublicMembers=List of public members
-ListOfValidatedPublicMembers=List of validated public members
-ErrorThisMemberIsNotPublic=This member is not public
-MembersCards=Members print cards
-MembersList=List of members
-MembersListToValid=List of draft members (to be validated)
-MembersListValid=List of valid members
-MembersListUpToDate=List of valid members with up to date subscription
-MembersListNotUpToDate=List of valid members with subscription out of date
-MembersListResiliated=List of resiliated members
-MembersListQualified=List of qualified members
-MenuMembersToValidate=Draft members
-MenuMembersValidated=Validated members
-MenuMembersUpToDate=Up to date members
-MenuMembersNotUpToDate=Out of date members
-MenuMembersResiliated=Resiliated members
-DateAbonment=Subscription date
-DateSubscription=Subscription date
-DateNextSubscription=Next subscription
-DateEndSubscription=Subscription end date
-EndSubscription=End subscription
-NewMember=New member
-NewType=New member type
-MemberType=Member type
-MemberTypeId=Member type id
-MemberTypeLabel=Member type label
-MembersTypes=Members types
-MembersAttributes=Members attributes
-SearchAMember=Search a member
-MemberStatusDraft=Draft (needs to be validated)
-MemberStatusDraftShort=To validate
-MemberStatusActive=Validated (waiting subscription)
-MemberStatusActiveShort=Validated
-MemberStatusActiveLate=subscription expired
-MemberStatusActiveLateShort=Expired
-MemberStatusPaid=Subscription up to date
-MemberStatusPaidShort=Up to date
-MemberStatusResiliated=Resiliated member
-MemberStatusResiliatedShort=Resiliated
-MembersStatusToValid=Draft members
-MembersStatusToValidShort=Draft members
-MembersStatusValidated=Validated members
-MembersStatusPaid=Subscription up to date
-MembersStatusPaidShort=Up to date
-MembersStatusNotPaid=Subscription out of date
-MembersStatusNotPaidShort=Out of date
-MembersStatusResiliated=Resiliated members
-MembersStatusResiliatedShort=Resiliated members
-NewCotisation=New contribution
-EditMember=Edit member
-SubscriptionEndDate=Subscription's end date
-NewAttribute=New attribut
-AttributeCode=Attribute code
-OptionalFieldsSetup=Optional fields setup
-MembersTypeSetup=Members type setup
-NewSubscription=New subscription
-Subscription=Subscription
-Subscriptions=Subscriptions
-SubscriptionLate=Late
-SubscriptionNotReceived=Subscription never received
-SubscriptionLateShort=Late
-SubscriptionNotReceivedShort=Never received
-ListOfSubscriptions=List of subscriptions
-SendCardByMail=Send card
-AddMember=Add member
-MemberType=Member type
-NoTypeDefinedGoToSetup=No member types defined. Go to setup - Members types
-NewMemberType=New member type
-WelcomeEMail=Welcome e-mail
-SubscriptionRequired=Subscription required
-EditType=Edit member type
-DeleteType=Delete
-VoteAllowed=Vote allowed
-Physical=Physical
-Moral=Moral
-MorPhy=Moral/Physical
-Reenable=Reenable
-ResiliateMember=Resiliate a member
-ConfirmResiliateMember=Are you sure you want to resiliate this member ?
-DeleteMember=Delete a member
-ConfirmDeleteMember=Are you sure you want to delete this member (Deleting a member will delete all his subscriptions) ?
-DeleteSubscription=Delete a subscription
-ConfirmDeleteSubscription=Are you sure you want to delete this subscription ?
-Filehtpasswd=htpasswd file
-ValidateMember=Validate a member
-ConfirmValidateMember=Are you sure you want to validate this member ?
-FollowingLinksArePublic=The following links are open pages not protected by any Dolibarr permission. They are not formated pages, provided as example to show how to list members database. 
-PublicMemberList=Public member list
-BlankSubscriptionForm=Subscription form
-MemberPublicLinks=Public links/pages
-ExportDataset_member_1=Members and subscriptions
-LastMembers=Last %s members
-LastMembersModified=Last %s modified members
-AttributeName=Attribute name
-FieldEdition=% field edition
-AlphaNumOnlyCharsAndNoSpace=only alphanumericals characters without space
-String=String
-Text=Text
-Int=Int
-Date=Date
-DateAndTime=Date and time
-PublicMemberCard=Member public card
-MemberNotOrNoMoreExpectedToSubscribe=Member not or no more expected to subscribe
-AddSubscription=Add subscription
-ShowSubscription=Show subscription
-MemberModifiedInDolibarr=Member modified in Dolibarr
-SendAnEMailToMember=Send information email to member
-DescADHERENT_MAIL_VALID_SUBJECT=EMail subject for member validation
-DescADHERENT_MAIL_VALID=EMail for member validation
-DescADHERENT_MAIL_COTIS_SUBJECT=EMail subject for subscription
-DescADHERENT_MAIL_COTIS=EMail for subscription
-DescADHERENT_MAIL_RESIL_SUBJECT=EMail subject for member resiliation
-DescADHERENT_MAIL_RESIL=EMail for member resiliation
-DescADHERENT_MAIL_FROM=Sender EMail for automatic emails
-DescADHERENT_ETIQUETTE_TYPE=Labels format
-DescADHERENT_CARD_HEADER_TEXT=Text printed on top of member cards
-DescADHERENT_CARD_TEXT=Text printed on member cards
-DescADHERENT_CARD_FOOTER_TEXT=Text printed on bottom of member cards
-ShowTypeCard=Show type '%s'
-HTPasswordExport=htpassword file generation
-
 
 // START - Lines generated via autotranslator.php tool (2010-07-17 11:45:17).
 // Reference language: en_US
